Fixed issue with list item alignment

--- a/frontend/app/components/LinkItem/LinkItem.scss
+++ b/frontend/app/components/LinkItem/LinkItem.scss
@@ -26,6 +26,7 @@
     }
 
     &__Content {
+        width: 100%;
     }
 
     &__Title {
